--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test": "jest; exit 0",
     "start": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Trevor Mackin",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -19,6 +20,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.0.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "styled-jsx": "^3.2.4",
     "uuid": "^3.2.1"
   },
@@ -28,6 +30,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^4.13.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.18.3",
@@ -35,6 +38,7 @@
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "react-hot-loader": "^3.0.0-beta.7",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.11.5"
